syntax = "proto3";
package com.example.grpc;

import "information.proto";

message BaseRequest {
  string playerId = 1;
  int64 timestamp = 2;
}

message AckConfirmation {
  string text = 1;
  double timePassed = 2;
}

service BaseAccessService {
  rpc requestBaseAccess(BaseRequest) returns (AckConfirmation);
  rpc sendBackConfirmation(AckConfirmation) returns (Ack);
}