syntax = "proto3";
package com.example.grpc;

message PlayerGameInfo {
  string id = 1;
  string address = 2;
  int32 port = 3;
  Coordinate coordinate = 4;
}

message Coordinate {
  int32 x = 1;
  int32 y = 2;
}

message ObtainedAccessInfo {
  string playerId = 1;
  double timeWaited = 2;
}

message AckPlayerInfo {
  string state = 1;
  string role = 2;
}

message Ack {
  string text = 1;
}

service InformationService {
    rpc playerPresentation(PlayerGameInfo) returns (AckPlayerInfo);
    rpc playerObtainAccess(ObtainedAccessInfo) returns (Ack);
}